<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BackgroundWelcome"
        android:isScrollContainer="true">


        <TextView
            android:id="@+id/name_main_tab"
            android:layout_width="207dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/welcomeshape"
            android:gravity="center"
            android:text="@string/Welcome_login_register_tab"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/hintcolor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.80"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_main_tab">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_text_login_tab"
                android:textColor="@color/hintcolor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="52dp"

                android:autofillHints=""
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/name_text_login_register_tab"
                android:inputType="textPersonName"

                android:background="@drawable/welcomeshape2"
                android:textColorHint="@color/hintcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"

                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/password_text_login_register_tab"
                android:inputType="textPassword"

                android:background="@drawable/welcomeshape2"
                android:minHeight="48dp"
                android:textColorHint="@color/hintcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="128dp"
                android:layout_height="0dp"
                android:layout_marginTop="52dp"
                android:text="@string/login_button_text_login_tab"
                android:backgroundTint="@color/BackgroundWelcome"
                android:textColor="@color/hintcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="128dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/BackgroundWelcome"
                android:text="@string/register_here_text_login_tab"
                android:textColor="@color/hintcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginbutton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>